# TDS_virtual_TA_23f1002471

./: .gitignore  chunked_qa_pairs.jsonl  chunker.py  chunker_qa_pairs.py  combined_chunks.jsonl  discourse_qa_pairs.jsonl  embedder.py  embedding_qa_style.py  main.py  pyproject.toml  qa_combiner.py  requirements.txt
Scraping_scripts/: discourse_scraper.py  website_scraper.py
